charts/zot/zot-route.yaml
# charts/zot/zot-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zot-route
  namespace: inis-registry
spec:
  parentRefs:
  - name: zot-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: zot # Nom du service Kubernetes de Zot
      port: 5001
